fix(table): correct alignment for custom components in column header
fix: Lundalogik/crm-feature#1806

--- a/src/components/table/partial-styles/header-component.scss
+++ b/src/components/table/partial-styles/header-component.scss
@@ -1,6 +1,7 @@
 .lime-col-title__custom-component {
     width: 100%;
     display: flex;
+    align-items: center;
 }
 .title-component-text {
     @include truncate-text();
